syntax = "proto3";

service Products {
    rpc createProduct(Product) returns (Product){}
    rpc findProduct(ProductId) returns (Product){}
}

message ProductId {
    int32 id = 1;
}

message Product {
    int32 id = 1;
    int32 userId = 2;
    string productName = 3;
}